--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@babel/core": "^7.18.6",
     "@babel/plugin-transform-modules-commonjs": "^7.18.6",
+    "@webpack-cli/serve": "^2.0.5",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.6.0",
     "dotenv-webpack": "^2.0.0",
@@ -24,7 +25,7 @@
     "jest": "^29.6.2",
     "style-loader": "^1.3.0",
     "webpack": "^5.88.2",
-    "webpack-cli": "^3.3.12",
+    "webpack-cli": "^5.2.0",
     "webpack-dev-server": "^4.15.1"
   },
   "dependencies": {
