--- a/package.json
+++ b/package.json
@@ -13,19 +13,22 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.18.6",
+    "@babel/core": "^7.22.10",
     "@babel/plugin-transform-modules-commonjs": "^7.18.6",
+    "@babel/preset-env": "^7.22.10",
     "@webpack-cli/serve": "^2.0.5",
+    "babel-loader": "^9.1.3",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.6.0",
     "dotenv-webpack": "^3.0.0",
     "eslint": "^8.18.0",
     "eslint-webpack-plugin": "^2.7.0",
+    "gh-pages": "^6.0.0",
     "html-webpack-plugin": "^4.5.2",
     "jest": "^29.6.2",
     "style-loader": "^1.3.0",
     "webpack": "^5.88.2",
-    "webpack-cli": "^5.1.0",
+    "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
   },
   "dependencies": {
